--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,22 @@
     <string name="advanced">Advanced</string>
     <string name="About">About</string>
     <string name="Exit">Exit</string>
+    <string name="bksp">Bksp</string>
+    <string name="clear">C</string>
+    <string name="division">/</string>
+    <string name="multiplication">*</string>
+    <string name="subtraction">-</string>
+    <string name="_0">0</string>
+    <string name="separated_sign">.</string>
+    <string name="equals_sign">=</string>
+    <string name="addition_sign">+</string>
+    <string name="change_sign_sign">+/-</string>
+    <string name="sin">sin</string>
+    <string name="cos">cos</string>
+    <string name="tan">tan</string>
+    <string name="ln">ln</string>
+    <string name="sqrt">sqrt</string>
+    <string name="power_of_two">x^2</string>
+    <string name="exponentiation">x^y</string>
+    <string name="log">log</string>
 </resources>
