--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="power_of_two">x^2</string>
     <string name="exponentiation">x^y</string>
     <string name="log">log</string>
+    <string name="invalid_equation">Invalid equation</string>
 </resources>
