--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="exponentiation">x^y</string>
     <string name="log">log</string>
     <string name="invalid_equation">Invalid equation</string>
+    <string name="powered_by">Powered by Dawid Świnoga</string>
 </resources>
